tests/fixtures/invalid/schema/missing-message-paren.lgs
enum Fruit {
  apple
}

delivery(fruit: Fruit
